samples/_failures_safe/1761510867_31a3c9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1a3bb002.c: In function ‘tokenize’:
./samples/SAFE/__tmp_1a3bb002.c:151:13: error: expected expression at end of input
  151 |             tokens[count] =
      |             ^~~~~~
./samples/SAFE/__tmp_1a3bb002.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1a3bb002.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1a3bb002.c:151:13: error: expected declaration or statement at end of input
